<resources>
    <string name="app_name">GPS Tracker</string>
    <string name="tracks">Tracks</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="location">Местоположение</string>
    <string name="update_loc_time">Время обновления местоположения</string>
    <string name="time_of_updating">Частота обновления</string>
    <string name="change_track_color">Изменить цвет маршрута</string>
    <string name="track_color">Цвет маршрута</string>
    <string name="enable_location_dialog">Хотите включить местоположение?</string>
    <string name="location_disabled">Местоположение выключено</string>
    <string name="tracker_is_working">Трекер запущен</string>
    <string name="findlocation">findLocation</string>
    <string name="start_stop_track">start stop track</string>
</resources>